2010-09-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without OpenSSL/GnuTLS.
	* src/DownloadCommand.cc

2010-09-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without BitTorrent support and OpenSSL/GnuTLS.
	* src/DownloadCommand.cc
	* src/DownloadCommand.h
	* src/RequestGroup.cc

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing MockSegment.h to test/Makefile.am
	* test/Makefile.am

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced V_TRUE with A2_V_TRUE. Replaced V_FALSE with A2_V_FALSE.
	* src/AbstractCommand.cc
	* src/HttpResponseCommand.cc
	* src/Option.cc
	* src/OptionHandlerFactory.cc
	* src/OptionHandlerImpl.h
	* src/TrackerWatcherCommand.cc
	* src/download_helper.cc
	* src/main.cc
	* src/prefs.cc
	* src/prefs.h
	* test/AuthConfigFactoryTest.cc
	* test/DefaultBtProgressInfoFileTest.cc
	* test/DownloadHelperTest.cc
	* test/HttpRequestTest.cc
	* test/OptionHandlerTest.cc
	* test/UTMetadataPostDownloadHandlerTest.cc
	* test/XmlRpcMethodTest.cc

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated autoconf 2.67
	* configure.ac

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.10.3
	* configure.ac
	* doc/aria2c.1.txt

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page according to changes in options.
	* doc/aria2c.1.txt

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added short option -k for --min-split-size option and -x for
	--max-connection-per-server option. Raised maximum value of
	--max-connection-per-server up to 16.
	* src/OptionHandlerFactory.cc
	* src/usage_text.h

2010-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use uri::parse instead of Request::setUri() where just URI parser
	is needed.
	* src/AbstractCommand.cc
	* src/AdaptiveURISelector.cc