@@ -1,3 +1,9 @@
+2010-09-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed the bug that error occurs when downloading zero-length file.
+	* src/FtpNegotiationCommand.cc
+	* src/HttpResponseCommand.cc
+
 2010-09-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Fixed compile error without OpenSSL/GnuTLS.
